Fixed flickering life cycle icons

--- a/src/components/AnimalActivityGrid/AnimalActivityGridIcon.module.css
+++ b/src/components/AnimalActivityGrid/AnimalActivityGridIcon.module.css
@@ -1,3 +1,3 @@
 .AnimalActivityGridIconIntermediate {
-  opacity: 0.7;
+  opacity: 0.5;
 }
